# unlockpi.ai-agent

./: CODE-WALKTHROUGH.md  HOW-IT-WORKS.md  SYSTEM-DESIGN.md  agent.py  config.py  learnings-agents.md  pyproject.toml  request.json  skills-lock.json  test.py
agents/: interview_agent.py  session_data.py  tutor_agent.py
board_types/: __init__.py
helpers/: board_engine.py  db.py  model_fallbacks.py  room_utils.py
prompts/: bmsce-tutor.md  kvg-ai-systemprompt.md  mit-interview.md  mit-tutor.md  temp-mit.md  tutor.md
prompts/other/: general-tutor.md  temp-bmsce-interview.md
tests/: test_model_fallbacks.py
tools/: __init__.py  board_tools.py  visual_tools.py
